<resources>
    <string name="app_name">TwoYou Team</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="password_must_be_at_least_6_characters">Password must be at least 6 characters</string>
    <string name="welcome">Welcome!</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="welcome_login">Welcome!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="email_can_t_be_null">Email can\'t be null</string>
    <string name="password_can_t_be_null">Password can\'t be null</string>
    <string name="uploading_image">Uploading image...</string>
    <string name="members_images">members_images</string>
    <string name="image_uploaded_successfully">Image uploaded successfully</string>
    <string name="members">members</string>
    <string name="imageurl">imageUrl</string>
    <string name="image">image/*</string>
    <string name="name">name</string>
    <string name="email_profile">email</string>
    <string name="phonenumber">phoneNumber</string>
    <string name="items">items</string>
    <string name="memberid">memberId</string>
    <string name="items_in_your_possession">"Items in your possession: "</string>
    <string name="member_name">Member name</string>
    <string name="email_profile_xml">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="change_picture">Change Picture</string>
    <string name="items_in_your_possession_xml">Items in your possession:</string>
    <string name="log_out">LOG OUT</string>
    <string name="profile">Profile</string>
    <string name="twoyou_team">TwoYou Team</string>
    <string name="we_are_connected">We are connected.</string>
    <string name="you">You? </string>
    <string name="dashboard">Dashboard</string>
    <string name="search_items">Search Items</string>
    <string name="search_members">Search Members</string>
    <string name="manual_scan">Manual Scan</string>
    <string name="profile_main">Profile</string>
    <string name="scan_qr">Scan QR</string>
    <string name="storage">Storage</string>
    <string name="permission_needed_for_camera_access_allow_permission_in_your_device_s_settings">Permission needed for camera access. Allow permission in your device\'s settings.</string>
    <string name="invalid_scan_try_again">Invalid scan. Try again!</string>
    <string name="fetching_data">Fetching data...</string>
    <string name="item_scanned_successfully">Item scanned successfully</string>
    <string name="manual_scan_action_bar">Manual scan</string>
</resources>