<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activitymain_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:theme="@style/Theme.LicentaPBN"
    tools:context=".activities.MainActivityUser">

    <TextView
        android:id="@+id/twoyou_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/twoyou_team"
        android:textColor="@color/red_bright"
        android:textSize="28sp"
        android:fontFamily="@font/poetsenone_regular"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline1_45"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline1_10"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/twoyou_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/tw_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline2_55"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/twoyou_description1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/we_are_connected"
        android:textColor="@color/blue_navy"
        android:textSize="14sp"

        android:fontFamily="@font/poetsenone_regular"
        app:layout_constraintEnd_toStartOf="@+id/twoyou_description2"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline1_10"
        app:layout_constraintTop_toBottomOf="@id/twoyou_name" />
    <TextView
        android:id="@+id/twoyou_description2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/you"
        android:textColor="@color/red_bright"
        android:textSize="14sp"
        android:textStyle="bold"
        android:fontFamily="@font/poetsenone_regular"
        app:layout_constraintStart_toEndOf="@id/twoyou_description1"
        app:layout_constraintTop_toBottomOf="@id/twoyou_name" />


    <androidx.cardview.widget.CardView
        android:id="@+id/SearchItems_cardview_first_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toStartOf="@id/vertical_guideline1_45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/twoyou_image">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/search_items_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/search_items_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/search_items"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/search_items_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/items_icon" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/SearchMembers_cardview_2nd_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:focusable="true"
        android:clickable="true"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline2_55"
        app:layout_constraintTop_toBottomOf="@id/twoyou_image">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/search_member_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/members_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/search_members"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/members_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/members_icon" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/manual_search_cardview_3rd_carview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:focusable="true"
        android:clickable="true"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline1_45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SearchItems_cardview_first_card">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/manual_search_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/manual_add_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/manual_scan"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/manual_add_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/manual_add_icon" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_cardview_4th_cardview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:focusable="true"
        android:clickable="true"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline2_55"
        app:layout_constraintTop_toBottomOf="@id/SearchMembers_cardview_2nd_card">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/profile_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/profile_main"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/profile_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/profile_icon" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/qr_scanner_cardview_5h_cardview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:focusable="true"
        android:clickable="true"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_cardview_4th_cardview">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/scan_qr_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/qr_scanner_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/scan_qr"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/qr_scanner_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/qr_scanner_icon" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline1_45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.475" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline2_55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.525" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline1_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

</androidx.constraintlayout.widget.ConstraintLayout>