<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/caseta_login_background"
    tools:context=".activities.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top_login_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_login_form_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rectangle_login"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="50dp"
        app:cardElevation="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_top_login_form">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/login_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_login"
                android:fontFamily="@font/poetsenone_regular"
                android:textAlignment="center"
                android:textColor="@color/red_bright"
                android:textSize="32sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_username_login"
                android:textColorHint="@drawable/login_tiet_hint_selector"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxStrokeWidth="0dp"
                app:hintTextColor="@color/grey_hint"
                app:boxStrokeWidthFocused="0dp"
                android:layout_marginTop="24dp"
                android:hint="@string/email"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:background="@drawable/rectangle_login"
                    android:drawableStart="@drawable/person_symbol_login"
                    android:padding="22dp"
                    android:drawablePadding="16dp"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                     />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password_login"
                android:textColorHint="@drawable/login_tiet_hint_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="0dp"
                app:hintTextColor="@color/grey_hint"
                app:boxStrokeWidthFocused="0dp"
                android:hint="@string/password"
                android:layout_marginTop="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_login"
                    android:drawableStart="@drawable/lock_login"
                    android:drawablePadding="16dp"
                    android:textColor="@color/black"
                    android:padding="22dp"
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    android:textIsSelectable="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/black_red"
                android:focusable="true"
                android:clickable="true"
                android:text="@string/log_in"
                android:textColor="@color/red_bright"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/poetsenone_regular"
                app:cornerRadius="20dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_orizonal_45_loginActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ProgressBar
        android:id="@+id/progress_bar_loginActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_orizonal_45_loginActivity"
        android:elevation="25dp" />
</androidx.constraintlayout.widget.ConstraintLayout>